app/demo/test-service.yaml
---

kind: Service

apiVersion: v1

metadata:

  labels:

    app: test-tomcat

  name: test-tomcat

  namespace: default

spec:

  type: NodePort

  ports:

  - port: 80

    targetPort: 8080

  selector:

    app: test-tomcat
